handle items pagination and enhance app design

--- a/src/components/SlidableList/SlidableListItem/SlidableListItem.scss
+++ b/src/components/SlidableList/SlidableListItem/SlidableListItem.scss
@@ -100,7 +100,7 @@
     .slidablelist--station--info{
         margin-top:0.3rem;
         .station--name, .station--location{
-            width:100vw;
+            width:100%;
         }
     }
 }
