--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -5,7 +5,7 @@ header#header{
     width: 100%;
     height: var(--height-header);
     padding: 0.3rem 0.8rem 0.6rem 0.4rem;
-    box-shadow: 10px 7px 16px 1px rgba(0, 0, 0, 0.06);
+    box-shadow: inset 0 -1px 0 0 var(--borders-clr);
     .navigation--container{
         align-items: center;
         justify-content: center;
