--- a/src/components/Suggestions/Suggestions.scss
+++ b/src/components/Suggestions/Suggestions.scss
@@ -5,20 +5,20 @@
     grid-template-columns: repeat(2, 1fr);
     gap: 0.3rem 1rem;
     #recommended, #featured{
-        .suggestions--box--header{
-            align-items: center;
-            justify-content: space-between;
-        }
         width: 100%;
         padding:0;
+        overflow: hidden;
         background-color: var(--homeBoxes-bg-clr);
-        transition: background-color 0.3 linear;
+        transition: background-color 0.3s linear;
         display: block;
         padding: 1.3rem 1rem;
         margin-top: 1.3rem;
         border-radius: 0.5rem;
-        overflow: hidden;
         box-shadow: 0px 4px 16px 0px rgba(44,101, 144, 0.1);
+        .suggestions--box--header{
+            align-items: center;
+            justify-content: space-between;
+        }
         .list--name{
             margin-bottom: 1.5rem;
         }
@@ -41,10 +41,10 @@
                 .pop--tag{
                     padding: 0.2rem 0.4rem;
                     border-radius: 0.4rem;
-                    background-color: var(--text-black);
-                    color: var(--ultra-white);
+                    background-color: var(--pill-bg-color);
+                    color: var(--pill-text-color);
                     transition:  0.3s linear;
-                    transition-property: color,background-color;
+                    transition-property: color, background-color;
                     cursor: pointer;
                     border: 1px solid transparent;
                     &:hover{
@@ -70,7 +70,13 @@
                 place-items: center;
                 padding: 0.9rem 0.5rem;
                 cursor: pointer;
+                transition: background-color 0.3s linear;
                 .recommended--item--inner{
+                    svg{
+                        color: var(--primary-clr);
+                        width: 50px;
+                        margin: 0 auto 1.4rem auto;
+                    }
                     img{
                         width: 50px;
                         min-height: 100%;
@@ -84,7 +90,6 @@
                         text-transform: capitalize;
                     }
                 }
-                transition: background-color 0.3s linear;
                 &:hover{
                     background-color: var(--light-primary-clr);
                 }
