performance optimizations, bug fixes, re-factors, better dark theme styling, etc.

--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -15,6 +15,7 @@
         height: 100%;
        
         .copyright__sidebar{
+            margin-top: 1.4rem;
             justify-self: flex-end;
             text-align: center;
             font-size: var(--font-size-x-small);
