--- a/src/components/Modal/StationInfo/StationInfo.scss
+++ b/src/components/Modal/StationInfo/StationInfo.scss
@@ -2,7 +2,7 @@
   position: relative;
   .into--top {
     padding: 0.2rem 0 0.5rem 0;
-    border-bottom: 2px solid var(--light-gray);
+    border-bottom: 2px solid var(--borders-clr);
     .song__title {
       font-size: var(--font-size-medium);
       font-weight: var(--font-weight-heavy);
@@ -14,11 +14,10 @@
     min-height: 40px;
     position: relative;
     .station__info__loader{
+        margin-bottom: 0.2rem;
         text-align: center;
-        position: absolute;
-        top:50%;
-        left:50%;
-        transform: translate(-50%, -50%);
+        display: flex;
+        justify-content: center;
     }
   }
   .info--top--btns{
@@ -51,13 +50,14 @@
       display: none;
     }
     .info__song__tag__item {
-      padding: 0.3rem 0.5rem;
+      padding: 0.4rem 0.7rem;
       border-radius: 0.2rem;
       background-color: var(--lighter-gray);
       text-align: center;
       white-space: nowrap;
       margin-right: 0.4rem;
       cursor: pointer;
+      text-decoration: none;
       &:hover {
         text-decoration: underline;
       }
@@ -89,11 +89,8 @@
       }
     }
   }
-  // test
+
   .song--details--container {
-    // position: absolute;
-    // top: 0;
-    // left: 0;
     width: 100%;
     height: 100%;
     color: var(--text-black);
@@ -119,7 +116,7 @@
       word-break: break-word;
       margin-top: 30px;
       color: var(--text-gray);
-      border-bottom: 1px solid rgb(77, 77, 77);
+      border-bottom: 1px solid var(--borders-clr);
       padding-bottom: 30px;
     }
     .post-song--stats {
