--- a/src/components/SlidableList/SlidableListItem/SlidableListItem.scss
+++ b/src/components/SlidableList/SlidableListItem/SlidableListItem.scss
@@ -1,4 +1,4 @@
-#slidableListItem{
+.slidableListItem{
     margin-right: 0.2rem;
     max-width: 180px;
     &:last-of-type{
@@ -6,7 +6,7 @@
     }
     .picture--container{
         position: relative;
-        min-height: 140px;
+        min-height: 8.75rem;
         width: 100%;
         .music--anim--container, .slidable--item--layout, .slidable--item--layout--inner, img{
                 position: absolute;
@@ -23,22 +23,20 @@
             color: var(--gray);
             padding: 0.4rem;
             display: block;
-            z-index: 15;
-            transition: 0.250s ease-in;
-            transition-property: visibility, opacity;
             border-radius: var(--radius) ;
 
             .slidable--item--layout--inner{
                 height: 100%;
-                top:0.4rem;
-                left: 0.4rem;
+                top:0;
+                left: 0;
                 z-index: 10;
+                --item-spacing: 0.620rem;
                 .option__btn{
                     cursor: pointer;
                     color: #fff;
                     padding: 0.1rem 0.2rem;
-                    width: 30px;
-                    height: 30px;
+                    width: 1.875rem;
+                    height: 1.875rem;
                     border-radius: 50%;
                     background-color: transparent;
                     backdrop-filter: blur(15px) brightness(90%);
@@ -52,19 +50,19 @@
                 }
                 .slidable__item__fav__btn, .slidable__item__options__btn, .slidable__item__media__btn{
                     position: absolute;
-                    right: 13px;
+                    right: var(--item-spacing);
                 }
                 .slidable__item__options__btn, .slidable__item__media__btn{
-                    bottom: 13px;
+                    bottom: var(--item-spacing);
                 }
                 .slidable__item__fav__btn{
-                    top: 0px;
+                    top: var(--item-spacing);
                 } 
                 .slidable__item__media__btn{
-                    left:0px;
+                    left: var(--item-spacing);
                 }
                 .slidable__item__options__btn{
-                    font-size: 22px;
+                    font-size: 1.375rem;
                 }
                 .unlike{
                     color: var(--light-red);
@@ -73,7 +71,7 @@
 
         }
         img{
-            height: 140px;
+            height: 8.75rem;
             min-height: 100%;
             object-fit: fill;
             border-radius: var(--radius);
